# lampadaire-export

./: .dockerignore  .envdocker  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  TODO  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  test.latex
public/styloexport/: api.html  index.html
styles/: campus-adventiste-du-saleve-faculte-adventiste-de-theologie.csl  ecole-pratique-des-hautes-etudes-sciences-historiques-et-philologiques.csl  la-revue-des-sciences-de-gestion.csl  mots.csl  nouvelles-perspectives-en-sciences-sociales.csl  publicatiewijzer-voor-de-archeologie.csl  revue-francaise-d-administration-publique.csl  revue-francaise-de-gestion.csl  seminaire-saint-sulpice-ecole-theologie.csl  styles-custom.json  traces.csl  transversalites.csl  universitat-basel-iberoromanistik.csl  universite-de-geneve-departement-de-langue-et-de-litterature-francaises-modernes.csl  universite-de-montreal-faculte-de-musique.csl  universite-du-quebec-a-montreal-etudes-litteraires-et-semiologie.csl
styloexport/: __init__.py  api.py  article.py  commands.py  config.py  forms.py  lampadaire-export.code-workspace  pandocapi.py  styloapi.py  utils.py  views.py
styloexport/templates/: article.html  base.html  edition.html  index.html
templates/generique/: template-erudit.xsl  template-metopes.xsl  template-tei.tei  templateLaTeX.latex
templates/lampadaire/: README.md  template-tei.tei  template-xhtml.html  templateHtml5.html5  templateLaTeX.latex
tests/: conftest.py  test_api.py  test_article.py  test_views.py  test_views_export.py
(+54 files in other folders)
